--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!doctype html>
 <html ng-app="store">
   <head>
+    <meta charset="utf-8">
+    <title>AngularJS</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
   </head>
-  <body>
-    <div ng-controller="StoreController as store">
-      <h1> {{store.product.name}} </h1>
-      <h2> ${{store.product.price}} </h2>
-      <p> {{store.product.description}} </p>
+  <body ng-controller="StoreController as store">
+    <div class="container">
+      <div ng-repeat="product in store.products">
+        <div ng-hide="product.soldOut">
+          <h1> {{product.name}} </h1>
+          <h2> ${{product.price}} </h2>
+          <p> {{product.description}} </p>
+          <button ng-show="product.canPurchase"> Add to Cart </button>
+        </div>
+      </div>
     </div>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
