--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   <body ng-controller="StoreController as store">
     <div class="container">
-      <div ng-repeat="product in store.products">
-        <div ng-hide="product.soldOut">
-          <h1> {{product.name}} </h1>
-          <h2> ${{product.price}} </h2>
-          <p> {{product.description}} </p>
-          <button ng-show="product.canPurchase"> Add to Cart </button>
+      <ul class="list-group">
+        <li class="list-group-item" ng-repeat="product in store.products">
+          <h3>
+            {{product.name}}
+            <em class="pull-right">${{product.price}}</em>
+          </h3>
         </div>
-      </div>
+      </ul>
     </div>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
