now passes w3c validation

--- a/index.html
+++ b/index.html
@@ -1,46 +1,46 @@
 <!doctype html>
-<html ng-app="store">
+<html data-ng-app="store">
   <head>
     <meta charset="utf-8">
     <title>AngularJS</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
   </head>
-  <body ng-controller="StoreController as store">
+  <body data-ng-controller="StoreController as store">
     <div class="container">
       <ul class="list-group">
-        <li class="list-group-item" ng-repeat="product in store.products | orderBy:'-price'">
+        <li class="list-group-item" data-ng-repeat="product in store.products | orderBy:'-price'">
           <h3>
             {{product.name}}
             <em class="pull-right">{{product.price | currency}}</em>
-            <img ng-src="{{product.images[0].full}}"/>
+            <img data-ng-src="{{product.images[0].full}}" src="#" alt="{{product.name}}"/>
           </h3>
-          <section ng-controller="PanelController as panel">
+          <section data-ng-controller="PanelController as panel">
             <ul class="nav nav-pills">
-              <li ng-class="{ active: panel.isSelected(1) }">
-                <a href ng-click="panel.selectTab(1)">Description</a>
+              <li data-ng-class="{ active: panel.isSelected(1) }">
+                <a href="#" data-ng-click="panel.selectTab(1)">Description</a>
               </li>
-              <li ng-class="{ active: panel.isSelected(2) }">
-                <a href ng-click="panel.selectTab(2)">Specifications</a>
+              <li data-ng-class="{ active: panel.isSelected(2) }">
+                <a href="#" data-ng-click="panel.selectTab(2)">Specifications</a>
               </li>
-              <li ng-class="{ active: panel.isSelected(3) }">
-                <a href ng-click="panel.selectTab(3)">Reviews</a>
+              <li data-ng-class="{ active: panel.isSelected(3) }">
+                <a href="#" data-ng-click="panel.selectTab(3)">Reviews</a>
               </li>
             </ul>
             <!--{{tab}}-->
-            <div class="panel" ng-show="panel.isSelected(1)">
+            <div class="panel" data-ng-show="panel.isSelected(1)">
               <h4>Description</h4>
               <p>{{product.description}}</p>
             </div>
-            <div class="panel" ng-show="panel.isSelected(2)">
+            <div class="panel" data-ng-show="panel.isSelected(2)">
               <h4>Specifications</h4>
               <blockquote>None yet</blockquote>
             </div>
-            <div class="panel" ng-show="panel.isSelected(3)">
+            <div class="panel" data-ng-show="panel.isSelected(3)">
               <h4>Reviews</h4>
               <blockquote>None yet</blockquote>
             </div>
           </section>
-        </div>
+        </li>
       </ul>
     </div>
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
