--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
             </div>
             <div class="panel" data-ng-show="panel.isSelected(3)">
               <h4>Reviews</h4>
-              <blockquote>None yet</blockquote>
+              <blockquote data-ng-repeat="review in product.reviews">
+                <b>Stars: {{review.stars}}</b>
+                {{review.body}}
+                <cite>by: {{review.author}}</cite>
+              </blockquote>
             </div>
           </section>
         </li>
