--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="list-group">
     <!-- Product Container -->
     <div class="list-group-item" data-ng-repeat="product in store.products | orderBy:'-price'">
-      <h3>{{product.name}} <em class="pull-right">{{product.price | currency}}</em></h3>
+      <h3 data-ng-include="'product-title.html'"></h3>
 
       <img data-ng-src="{{product.images[0].full}}" src="#" alt="{{product.name}}" />
 
