added product description attribute directive

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <!--{{tab}}-->
         <!-- Description Tab Content -->
         <div class="panel" data-ng-show="panel.isSelected(1)">
-          <h4>Description</h4>
-          <blockquote>{{product.description}}</blockquote>
+          <h4 product-description></h4>
         </div>
 
         <!-- Spec Tab Content -->
