using the attribute on the div and not another h4

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
         </ul>
         <!--{{tab}}-->
         <!-- Description Tab Content -->
-        <div class="panel" data-ng-show="panel.isSelected(1)">
-          <h4 product-description></h4>
+        <div class="panel" data-ng-show="panel.isSelected(1)" product-description>
         </div>
 
         <!-- Spec Tab Content -->
