--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   </div>
   <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="products.js"></script>
 </body>
 
 </html>
